kubernetes/apps/unbound-xi-game/coordinator/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unbound-coordinator-worker-control-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: unbound-coordinator
      app.kubernetes.io/component: world-control-plane
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: unbound-game-server
      ports:
        - protocol: TCP
          port: 7443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unbound-coordinator-route-read-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: unbound-coordinator
      app.kubernetes.io/component: world-control-plane
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: unbound-gateway
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: unbound-instance-controller
      ports:
        - protocol: TCP
          port: 7442
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unbound-coordinator-private-metrics
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: unbound-coordinator
      app.kubernetes.io/component: world-control-plane
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 8082
